tests/spec/emit/snapshots/generic_call_types_a_literal_of_another_default.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn ident<T>(v: T) -> T { v }
  
  fn test() -> float64 {
    let widened: float64 = ident(1)
    let already: float64 = ident(1.5)
    let narrow: float32 = ident(2)
    widened / already + narrow as float64
  }
---
package main

func ident[T any](v T) T {
	return v
}

func test() float64 {
	widened := ident(float64(1))
	already := ident(1.5)
	narrow := ident(float32(2))
	return widened/already + float64(narrow)
}
