tests/spec/emit/snapshots/generic_call_with_named_function_alias_arg.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  type Handler = fn(int) -> int
  
  fn double(x: int) -> int {
    x * 2
  }
  
  struct Box<T> {
    pub v: T,
  }
  
  struct Wrap {
    pub b: Box<Handler>,
  }
  
  fn make_box<T>(x: T) -> Box<T> {
    Box { v: x }
  }
  
  fn main() {
    let _w = Wrap { b: make_box(double) }
    let _ = _w.b
  }
---
package main

type Handler func(int) int

func double(x int) int {
	return x * 2
}

type Box[T any] struct {
	V T
}

type Wrap struct {
	B Box[Handler]
}

func makeBox[T any](x T) Box[T] {
	return Box[T]{V: x}
}

func main() {
	_w := Wrap{B: makeBox[Handler](double)}
	_ = _w.B
}
