tests/spec/emit/snapshots/generic_enum_variant_non_t_data_needs_type_arg.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum MyResult<T> {
    Ok(T),
    Fail(string),
  }
  
  fn main() {
    let ok: MyResult<int> = MyResult.Ok(42);
    let fail: MyResult<int> = MyResult.Fail("oops");
  }
---
package main

func MakeMyResultOk[T any](arg0 T) MyResult[T] {
	return MyResult[T]{Tag: MyResultOk, Ok: arg0}
}

func MakeMyResultFail[T any](arg0 string) MyResult[T] {
	return MyResult[T]{Tag: MyResultFail, Fail: arg0}
}

type MyResultTag uint8

const (
	MyResultOk MyResultTag = iota
	MyResultFail
)

type MyResult[T any] struct {
	Tag  MyResultTag
	Ok   T
	Fail string
}

func main() {
	MakeMyResultOk(42)
	MakeMyResultFail[int]("oops")
}
