tests/spec/emit/snapshots/generic_enum_with_map_key_type_parameter.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Container<K: Comparable, V> {
    Empty,
    Indexed(Map<K, V>),
  }
  
  fn test() {
    let mut m = Map.new<string, int>()
    m["hello"] = 1
    let c = Container.Indexed<string, int>(m)
    c
  }
---
package main

func MakeContainerEmpty[K comparable, V any]() Container[K, V] {
	return Container[K, V]{Tag: ContainerEmpty}
}

func MakeContainerIndexed[K comparable, V any](arg0 map[K]V) Container[K, V] {
	return Container[K, V]{Tag: ContainerIndexed, Indexed: arg0}
}

type ContainerTag uint8

const (
	ContainerEmpty ContainerTag = iota
	ContainerIndexed
)

type Container[K comparable, V any] struct {
	Tag     ContainerTag
	Indexed map[K]V
}

func test() {
	m := make(map[string]int)
	m["hello"] = 1
	c := MakeContainerIndexed[string, int](m)
	_ = c
}
