tests/spec/emit/snapshots/generic_enum_with_multiple_variant_fields.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Either<L, R> { Left(L), Right(R) }
  
  fn test() -> Either<int, string> {
    Either.Left(42)
  }
---
package main

func MakeEitherLeft[L any, R any](arg0 L) Either[L, R] {
	return Either[L, R]{Tag: EitherLeft, Left: arg0}
}

func MakeEitherRight[L any, R any](arg0 R) Either[L, R] {
	return Either[L, R]{Tag: EitherRight, Right: arg0}
}

type EitherTag int

const (
	EitherLeft EitherTag = iota
	EitherRight
)

type Either[L any, R any] struct {
	Tag   EitherTag
	Left  L
	Right R
}

func test() Either[int, string] {
	return MakeEitherLeft[int, string](42)
}
